--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -112,6 +112,7 @@
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{5}
+\usepackage{setspace}
 \usepackage{booktabs}
 \usepackage{longtable}
 \usepackage[bf,singlelinecheck=off]{caption}
@@ -202,7 +203,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-07-20}
+\date{2020-07-21}
 
 \begin{document}
 \maketitle
@@ -322,24 +323,25 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   repr_1.1.0               reprex_0.3.0            
 ##   rlang_0.4.6              rmarkdown_2.2           
 ##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rstudioapi_0.11         
-##   rvest_0.3.5              scales_1.1.1            
-##   selectr_0.4.2            sem_3.1.11              
-##   semTools_0.5.3           skimr_2.1.1             
-##   snakecase_0.11.0         splines_4.0.2           
-##   StanHeaders_2.21.0.5     statmod_1.4.34          
-##   stats_4.0.2              stats4_4.0.2            
-##   stringi_1.4.6            stringr_1.4.0           
-##   survival_3.1-12          sys_3.3                 
-##   testthat_2.3.2           tibble_3.0.1            
-##   tidyr_1.1.0              tidyselect_1.1.0        
-##   tidyverse_1.3.0          tinytex_0.23            
-##   tmvnsim_1.0-2            tools_4.0.2             
-##   utf8_1.1.4               utils_4.0.2             
-##   vctrs_0.3.1              viridis_0.5.1           
-##   viridisLite_0.3.0        whisker_0.4             
-##   withr_2.2.0              xfun_0.14               
-##   xml2_1.3.2               yaml_2.2.1
+##   rprojroot_1.3.2          rsconnect_0.8.16        
+##   rstudioapi_0.11          rvest_0.3.5             
+##   scales_1.1.1             selectr_0.4.2           
+##   sem_3.1.11               semTools_0.5.3          
+##   skimr_2.1.1              snakecase_0.11.0        
+##   splines_4.0.2            StanHeaders_2.21.0.5    
+##   statmod_1.4.34           stats_4.0.2             
+##   stats4_4.0.2             stringi_1.4.6           
+##   stringr_1.4.0            survival_3.1-12         
+##   sys_3.3                  testthat_2.3.2          
+##   tibble_3.0.1             tidyr_1.1.0             
+##   tidyselect_1.1.0         tidyverse_1.3.0         
+##   tinytex_0.23             tmvnsim_1.0-2           
+##   tools_4.0.2              utf8_1.1.4              
+##   utils_4.0.2              vctrs_0.3.1             
+##   viridis_0.5.1            viridisLite_0.3.0       
+##   whisker_0.4              withr_2.2.0             
+##   xfun_0.14                xml2_1.3.2              
+##   yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -5049,35 +5051,8 @@ Sample statistics, however, often differ from population parameters. The differe
 
 Further complicating matters is the fact that the formula used for a sample statistic may or may not be the same as the formula used for the corresponding population parameter. This occurs because the purpose of the sample statistic is typically not to describe the sample. Rather the purpose of the sample statistic is to estimate the population parameter. Depending on the parameter, you may or may not be able to use the same formula with sample data as you would with population data.
 
-\hypertarget{notation-1}{%
-\section{Notation}\label{notation-1}}
-
-In the formulas below, when we refer the population, we use uppercase letters when indicating members (\(X\)) or the size (\(N\)). In contrast, when we refer to the sample, we use lowercsae letters when indicating members (\(x\)) or the size (\(n\)). Make sure you notice the similarities between population and sample formulas even when the notation differs.
-
-\hypertarget{estimating-the-mean}{%
-\section{Estimating the mean}\label{estimating-the-mean}}
-
-We are interested in sample means (\(\bar{x}\)) to the extent that they provide an estimate of the population mean (\(\mu\)).
-
-The population mean, \(\mu\), is a parameter calculated using Formula \eqref{eq:popmeanch5}
-
-\begin{equation} 
-\mu = \frac{\sum{X}}{N}
-      \label{eq:popmeanch5}
-\end{equation}
-
-The sample mean, \(\bar{x}\), is a statistic calculated using the using Formula \eqref{eq:samplemeanch5}. The bar of above the \(x\), indicates that it is a mean. Notice that the two formulas are the same - even though they use different notation.
-
-\begin{equation} 
-\bar{x} = \frac{\sum{x}}{n}
-      \label{eq:samplemeanch5}
-\end{equation}
-
-A sample mean is calculated using sample data which is a random subset of the population. Consequently, the sample mean (a statistic) is likely to differ from the population mean (a parameter). If you, inaccurately, believe that you can learn something meaningful form a single study, the fact that sample means differ from the popualtion mean could potentially be concerning. Statisticians know, however, that you can rarely learn anything from a single study or even a small set of studies. Consequently, they are more interested in what is true, on average, over a large number of studies.
-
-One way of assessing the quality of the sample mean as an estimate of the population mean is by examining bias. If the average of many sample means is equal to the population mean, then we consider the sample mean to be an unbiased estimator of the population mean.
-
-Fortunately, the average of many sample means does equal the population mean - so the sample mean is an unbiased estimator of the population mean. This fact can be illustrated with a computer simulation.
+\hypertarget{data-for-the-chapter}{%
+\section{Data for the chapter}\label{data-for-the-chapter}}
 
 We begin by activating the required packages:
 
@@ -5112,7 +5087,7 @@ The glimpse() command can be used to confirm that the population contains 100,00
 ## $ height <dbl> 177, 150, 171, 157, 169, 187, 163, 173, ...
 \end{verbatim}
 
-We can use the head() command to illustrate that each row in pop\_data represents a single person.
+We can use the head() command to see the first 10 rows of the 100,00 rows. We see that each row in pop\_data represents a single person.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5136,7 +5111,22 @@ We can use the head() command to illustrate that each row in pop\_data represent
 ## 10    10 male      193
 \end{verbatim}
 
-We can use tidyverse commands to determine the mean of the population (\(\mu\)):
+\hypertarget{notation-1}{%
+\section{Notation}\label{notation-1}}
+
+In the formulas below, when we refer the population, we use uppercase letters when indicating members (\(X\)) or the size (\(N\)). In contrast, when we refer to the sample, we use lowercsae letters when indicating members (\(x\)) or the size (\(n\)). Make sure you notice the similarities between population and sample formulas even when the notation differs.
+
+\hypertarget{estimating-the-mean}{%
+\section{Estimating the mean}\label{estimating-the-mean}}
+
+We are interested in the sample mean (\(\bar{x}\)) to the extent that it provides an estimate of the population mean (\(\mu\)). The population mean is calculated using Formula \eqref{eq:popmeanch5}:
+
+\begin{equation} 
+\mu = \frac{\sum{X}}{N}
+      \label{eq:popmeanch5}
+\end{equation}
+
+We can calculate the population mean for the height column of pop\_data using the summarise() and mean() commands. The mean() command uses Formula \eqref{eq:popmeanch5}. We see in the output that the population mean is 172.48 (\(\mu = 172.48\)).
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5151,17 +5141,19 @@ We can use tidyverse commands to determine the mean of the population (\(\mu\)):
 ## 1    172.5
 \end{verbatim}
 
-We see that the mean of the population is \(\mu = 172.48\). We can illustrate how random sampling works, with respect to estimating this population mean, by taking a large number of samples from the population.
+As noted previously, we rarely has access to data from an entire population. Consequently, we use the sample mean as an estimate of the population mean. The sample mean, \(\bar{x}\), is a statistic calculated using the using Formula \eqref{eq:samplemeanch5}. The bar of above the \(x\), indicates that it is a mean. Notice that Formula \eqref{eq:popmeanch5} and Formula \eqref{eq:samplemeanch5} are the same - even though they use different notation.
 
-In the code below, we use the get\_M\_samples() command to obtain 5000 samples, each composed of 10 people. For each of these 5000 samples we calculate a variety of statistics and place themm in the many\_samples data frame. Each row of many\_samples represents a sample of 10 people. Each column of many\_samples indicates a sample statistic or the population parameter the statistic is estimating.
+\begin{equation} 
+\bar{x} = \frac{\sum{x}}{n}
+      \label{eq:samplemeanch5}
+\end{equation}
+
+Because a sample mean (a statistic) is calculated using a random subset of the population it is likely to differ from the population mean (a parameter). If you, inaccurately, believe that you can learn something meaningful from a single study, this fact may be concerning. Statisticians know, however, that you can rarely learn anything from a single study or even a small set of studies. Consequently, they are more interested in what is true, on average, over a large number of studies. Therefore, we simulate drawing a large number of samples from a population with the code below.
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\CommentTok{# set.seed ensures you get the same random samples}
-\KeywordTok{set.seed}\NormalTok{(}\DecValTok{1}\NormalTok{) }
-
 \NormalTok{many_samples <-}\StringTok{ }\KeywordTok{get_M_samples}\NormalTok{(}\DataTypeTok{pop.data =}\NormalTok{ pop_data, }
-                              \DataTypeTok{data.column.name =}\NormalTok{ height,}
+                              \DataTypeTok{pop.column.name =}\NormalTok{ height,}
                               \DataTypeTok{n =} \DecValTok{10}\NormalTok{,}
                               \DataTypeTok{number.of.samples =} \DecValTok{5000}\NormalTok{)}
 \end{Highlighting}
@@ -5176,95 +5168,99 @@ We use the head() command to see the first 10 rows (i.e., 10 samples of 5000 sam
 \end{Shaded}
 
 \begin{verbatim}
-##     n pop.M sample.M pop.var sample.var.n sample.var.n_1
-## 1  10 172.5    174.3   157.5        27.81          30.90
-## 2  10 172.5    161.8   157.5        83.36          92.62
-## 3  10 172.5    173.2   157.5       139.16         154.62
-## 4  10 172.5    180.0   157.5       321.80         357.56
-## 5  10 172.5    172.8   157.5       160.96         178.84
-## 6  10 172.5    172.0   157.5       159.60         177.33
-## 7  10 172.5    166.5   157.5        86.45          96.06
-## 8  10 172.5    173.5   157.5       139.45         154.94
-## 9  10 172.5    177.7   157.5       167.01         185.57
-## 10 10 172.5    168.5   157.5       262.65         291.83
+##     n pop.mean sample.mean pop.var sample.var.n
+## 1  10    172.5       174.3   157.5        27.81
+## 2  10    172.5       161.8   157.5        83.36
+## 3  10    172.5       173.2   157.5       139.16
+## 4  10    172.5       180.0   157.5       321.80
+## 5  10    172.5       172.8   157.5       160.96
+## 6  10    172.5       172.0   157.5       159.60
+## 7  10    172.5       166.5   157.5        86.45
+## 8  10    172.5       173.5   157.5       139.45
+## 9  10    172.5       177.7   157.5       167.01
+## 10 10    172.5       168.5   157.5       262.65
+##    sample.var.n_1
+## 1           30.90
+## 2           92.62
+## 3          154.62
+## 4          357.56
+## 5          178.84
+## 6          177.33
+## 7           96.06
+## 8          154.94
+## 9          185.57
+## 10         291.83
 \end{verbatim}
 
-You can see the for each sample we indicate n (the sample size), pop.M (the mean of the population), sample.M (the mean of the sample), and a few other statistics. Because all the samples came from the same population you can that the population mean (pop.M) is constant across rows/samples. In contrast, the sample mean (sample.M) varies across samples due to random sampling error.
-
-You can see the full extent to which the sample means vary by creating a graph with the code below. In this code, we use the pull() command to extract the value from the sample.M column and then we send them to the base R hisogram command, hist().
+Each row of many\_samples represents a sample of 10 people. Each column of many\_samples indicates a sample statistic. You can see the for each sample/row we indicate n (the sample size) and sample.mean (the mean of the population), and a few other statistics. Even though all the samples came from the same population you can see how the values in the sample.mean column vary across samples/rows. You can see the full extent to which the sample means vary by creating a graph with the code below. In this code, we use the pull() command to extract the value from the sample.mean column and then we send them to the base R hisogram command, hist().
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{many_samples }\OperatorTok{%>%}
-\StringTok{ }\KeywordTok{pull}\NormalTok{(sample.M) }\OperatorTok{%>%}
+\StringTok{ }\KeywordTok{pull}\NormalTok{(sample.mean) }\OperatorTok{%>%}
 \StringTok{ }\KeywordTok{hist}\NormalTok{(}\DataTypeTok{main =} \StringTok{"Histogram of Sample Means"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
 \includegraphics{bookdown_files/figure-latex/unnamed-chunk-215-1.pdf}
 
-You can see the 5000 sample means plotted in this graph. Recall the population mean for heights is \(\mu = 172.48\) cm. Notice that most of the sample means cluster around this value. Also notice there is considerable variability about this value. Any given sample mean (\(\bar{x}\)) may differ substantially from the population mean (\(\mu = 172.48\)). This variability illustrates the challenges with learning something from a single study - particularly a study with a small sample size.
+You can see the 5000 sample means, from the sample.mean column, plotted in this graph. Recall the population mean for heights is \(\mu = 172.48\) cm. Notice that most of the sample means cluster around this value. Also notice there is considerable variability about this value. Any given sample mean (\(\bar{x}\)) may differ substantially from the population mean (\(\mu = 172.48\)). This variability illustrates the challenges with learning something from a single study - particularly a study with a small sample size. Many of the sample means fall quite far from the population mean.
 
-Statisticians, recognizing the limitations of a single study, are not particularly concerned if a single sample deviates from the popualtion mean. That said, statisticians are very concerned whether the results of a large number of studies are correct -- on average. That is, does the average of many sample means correspond to the population mean. If, on average, the sample mean is accurate we refer to it as an unbiased estimator.
+Statisticians, recognizing the limitations of a single study, are not particularly concerned if a single sample mean deviates from the population mean. That said, statisticians are very concerned whether the results of a large number of studies are correct -- on average. That is, does the average of many sample means correspond to the population mean. If, on average, the sample mean is accurate we refer to it as an unbiased estimator.
 
 In the code below we calculate the average of the 5000 sample means to determine if the sample mean is an unbiased estimator.
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{many_samples }\OperatorTok{%>%}
-\StringTok{ }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{mean_of_sample.M =} \KeywordTok{mean}\NormalTok{(sample.M))}
+\StringTok{  }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{mean_of_sample.mean =} \KeywordTok{mean}\NormalTok{(sample.mean)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{as.data.frame}\NormalTok{()}
 \end{Highlighting}
 \end{Shaded}
 
 \begin{verbatim}
-##   mean_of_sample.M
-## 1            172.4
+##   mean_of_sample.mean
+## 1               172.4
 \end{verbatim}
 
-We find that the average of the 5000 sample means is 172.47 which is very close to the population mean of 172.48. Note that when we did this, we used the same formula to calculate the sample mean as we did the population mean. The average of the sample means was not identical to the population mean but it was very close - it would have been exactly the same with many more samples. Consequently, the sample mean provides an unbiased estimate of the population mean. In other words, it makes sense to use the sample mean as an estimate of the population mean. If we try to estimate the population mean with a sample mean we will, on average, be correct; although any given sample/study mean might be ``wrong''.
+We find that the average of the 5000 sample means is 172.41 which is very close to the population mean of 172.48. Note that when we did this, we used the same formula to calculate the sample mean (Formula \eqref{eq:samplemeanch5}) as we did the population mean (Formula \eqref{eq:popmeanch5}), although the notation differed. The average of the sample means was not identical to the population mean but it was very close - it would have been exactly the same with many more samples. Consequently, the sample mean provides an unbiased estimate of the population mean. In other words, it makes sense to use the sample mean as an estimate of the population mean. If we try to estimate the population mean with a sample mean we will, on average, be correct; although any given sample/study mean might be ``wrong''.
 
 \hypertarget{estimating-variance}{%
 \section{Estimating variance}\label{estimating-variance}}
 
-We are interested in sample variances (\(s^2\)) to the extent that they provide an estimate of the population mean (\(\sigma^2\)). Recall, the population variance, \(\sigma^2\), is a parameter calculated using Formula \eqref{eq:popvarch5}.
+We are interested in the sample variance (\(s^2\)) to the extent that it provides an estimate of the population variance (\(\sigma^2\)). The population variance is calculated using Formula \eqref{eq:popvarch5}:
 
 \begin{equation} 
 \sigma^2 = \frac{\sum{(X - \mu)^2}}{N}
       \label{eq:popvarch5}
 \end{equation}
 
-The sample variance, \(s^2\), is a statistic calculated using Formula \eqref{eq:samplevarnch5}. The formula is the same as at the population level but we use a different notation because it is a sample.
-
-\begin{equation} 
-s^2 = \frac{\sum{(x - \bar{x})^2}}{n}
-      \label{eq:samplevarnch5}
-\end{equation}
-
-Examine the output for 5000 samples we created using the head() command. Notice in this output we see the population variance is 157.46 (see the pop.var column). The values in this column were calculated, based on everyone in the poulation, using Formula \eqref{eq:popvarch5}.
+We can calculate the population variance for the height column of pop\_data using the summarise() and var.pop() commands. The var.pop() command uses Formula \eqref{eq:popvarch5}. We see in the output that the population variance is 157.5 (\(\sigma^2 = 157.5\)).
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\KeywordTok{head}\NormalTok{(many_samples, }\DecValTok{10}\NormalTok{)}
+\NormalTok{pop_data }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{pop_var =} \KeywordTok{var.pop}\NormalTok{(height)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{as.data.frame}\NormalTok{()}
 \end{Highlighting}
 \end{Shaded}
 
 \begin{verbatim}
-##     n pop.M sample.M pop.var sample.var.n sample.var.n_1
-## 1  10 172.5    174.3   157.5        27.81          30.90
-## 2  10 172.5    161.8   157.5        83.36          92.62
-## 3  10 172.5    173.2   157.5       139.16         154.62
-## 4  10 172.5    180.0   157.5       321.80         357.56
-## 5  10 172.5    172.8   157.5       160.96         178.84
-## 6  10 172.5    172.0   157.5       159.60         177.33
-## 7  10 172.5    166.5   157.5        86.45          96.06
-## 8  10 172.5    173.5   157.5       139.45         154.94
-## 9  10 172.5    177.7   157.5       167.01         185.57
-## 10 10 172.5    168.5   157.5       262.65         291.83
+##   pop_var
+## 1   157.5
 \end{verbatim}
 
-Now inspect the sample.var.n column the values in this column were calculated based on sample data using Formula \eqref{eq:samplevarnch5}. In this column we present the sample variance calculated, using the above formula, with \(n\) in the denominator. That is, in this column we have calculated sample variance using the same formula (but with different notation) as we used at the population level. Notice the values in the sample.var.n column vary due to random sampling.
+Because we rarely have access to data for an entire population we typically want to estimate the population variance using sample data. However, estimating the population parameter from a statistic, is more complicated for variance than it was for the mean. Initially, we might be tempted to use the formula below for sample variance, in which we divide by \(n\). This formula is the same as the population variance formula, Formula \eqref{eq:popvarch5}, but adapted to use sample-level notation.
 
-As we did with the mean, we can take the average of the 5000 sample variances (each using \(n\) in the denominator) to determine if the sample variance provides a biased or unbiased estimate of the population variance.
+\[
+\begin{aligned} 
+s^2 = \frac{\sum{(x - \bar{x})^2}}{n}
+\end{aligned} 
+\]
+
+The formula for sample variance with an \(n\) in the denominator is, unfortunately, a biased estimator of population variance. In the many\_samples data, the column sample.var.n contains the variance for the sample calculated with the above formula. Below we use code obtain, over the 5000 samples, the average of sample.var.n. The output reveals
+
+Because a sample mean (a statistic) is calculated using a random subset of the population it is likely to differ from the population mean (a parameter). If you, inaccurately, believe that you can learn something meaningful from a single study, this fact may be concerning. Statisticians know, however, that you can rarely learn anything from a single study or even a small set of studies. Consequently, they are more interested in what is true, on average, over a large number of studies. Therefore, we simulate drawing a large number of samples from a population with the code below.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5278,40 +5274,16 @@ As we did with the mean, we can take the average of the 5000 sample variances (e
 ## 1         141.1
 \end{verbatim}
 
-We find that the average of the 5000 sample variances is 141.86 which is not close to the population variance of 157.46. Note that when we did this, we used the same formula to calculate the sample variance as we did the population variance.
+The average of the sample variances (141.86), using \(n\) in the denominator, was different from the population variancee (157.46). The average of sample.var.n was much smaller than the population variance. Consequently, sample variance, using \(n\) in the denominator, provides a biased estimate of the population variance. If we try to estimate the population variance with a sample variance, using \(n\) in the denominator, we will, on average, be wrong.
 
-The average of the sample variances (141.86) was different from the population variancee (157.46). The average of the sample variance was much smaller than the population variance. Consequently, the sample variance provides a biased estimate of the population variance. If we try to estimate the population variance with a sample variance we will, on average, be wrong.
-
-Fortunately, there is a way around the fact that the sample variance provides a biased estimate of the population variance. We can derive a formula at the sample level that estimate the population variance that is not biased (see Hayes). An unbiased estimate of the population variance can be obtained if we calculate the sample variance but divide by \(n - 1\) instead of \(n\). The unbiased estimate is calculated using Formula \eqref{eq:samplevarn1ch5}.
+Fortunately, there is a sample-level formula that estimates the population variance without bias (see Hayes). An unbiased estimate of the population variance can be obtained if we calculate the sample variance but divide by \(n - 1\) instead of \(n\). The unbiased estimate is calculated using Formula \eqref{eq:samplevarn1ch5}.
 
 \begin{equation} 
 s^2 = \frac{\sum{(x - \bar{x})^2}}{n-1}
       \label{eq:samplevarn1ch5}
 \end{equation}
 
-The values in the sample.var.n\_1 column were calculated, based on sample data, using Formula \eqref{eq:samplevarn1ch5}. Check out this column using the head() command:
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\KeywordTok{head}\NormalTok{(many_samples, }\DecValTok{10}\NormalTok{)}
-\end{Highlighting}
-\end{Shaded}
-
-\begin{verbatim}
-##     n pop.M sample.M pop.var sample.var.n sample.var.n_1
-## 1  10 172.5    174.3   157.5        27.81          30.90
-## 2  10 172.5    161.8   157.5        83.36          92.62
-## 3  10 172.5    173.2   157.5       139.16         154.62
-## 4  10 172.5    180.0   157.5       321.80         357.56
-## 5  10 172.5    172.8   157.5       160.96         178.84
-## 6  10 172.5    172.0   157.5       159.60         177.33
-## 7  10 172.5    166.5   157.5        86.45          96.06
-## 8  10 172.5    173.5   157.5       139.45         154.94
-## 9  10 172.5    177.7   157.5       167.01         185.57
-## 10 10 172.5    168.5   157.5       262.65         291.83
-\end{verbatim}
-
-We can evaluate the quality of Formula \eqref{eq:samplevarn1ch5}, using \(n-1\), by averaging over values in the sample.var.n\_1 column.
+In the many\_samples data, the column sample.var.n\_1 was generated using Formula \eqref{eq:samplevarn1ch5}. We can evaluate the quality of Formula \eqref{eq:samplevarn1ch5}, using \(n-1\), by averaging over values in the sample.var.n\_1 column.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5438,8 +5410,15 @@ d  &= \frac{(\bar{x}_{male} - \bar{x}_{female})}{s_{pooled}} \\
 \end{aligned} 
 \]
 
+\newpage
+
+\hypertarget{meta-analysis}{%
+\section{Meta-analysis}\label{meta-analysis}}
+
 \hypertarget{overview}{%
 \section{Overview}\label{overview}}
+
+\doublespacing
 
 \begin{longtable}[]{@{}lll@{}}
 \toprule
@@ -5482,6 +5461,8 @@ Cohen's \(d\) or SMD\strut
 \end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
+
+\singlespacing
 
 \cleardoublepage
 
