--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -323,25 +323,24 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   repr_1.1.0               reprex_0.3.0            
 ##   rlang_0.4.6              rmarkdown_2.2           
 ##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rsconnect_0.8.16        
-##   rstudioapi_0.11          rvest_0.3.5             
-##   scales_1.1.1             selectr_0.4.2           
-##   sem_3.1.11               semTools_0.5.3          
-##   skimr_2.1.1              snakecase_0.11.0        
-##   splines_4.0.2            StanHeaders_2.21.0.5    
-##   statmod_1.4.34           stats_4.0.2             
-##   stats4_4.0.2             stringi_1.4.6           
-##   stringr_1.4.0            survival_3.1-12         
-##   sys_3.3                  testthat_2.3.2          
-##   tibble_3.0.1             tidyr_1.1.0             
-##   tidyselect_1.1.0         tidyverse_1.3.0         
-##   tinytex_0.23             tmvnsim_1.0-2           
-##   tools_4.0.2              utf8_1.1.4              
-##   utils_4.0.2              vctrs_0.3.1             
-##   viridis_0.5.1            viridisLite_0.3.0       
-##   whisker_0.4              withr_2.2.0             
-##   xfun_0.14                xml2_1.3.2              
-##   yaml_2.2.1
+##   rprojroot_1.3.2          rstudioapi_0.11         
+##   rvest_0.3.5              scales_1.1.1            
+##   selectr_0.4.2            sem_3.1.11              
+##   semTools_0.5.3           skimr_2.1.1             
+##   snakecase_0.11.0         splines_4.0.2           
+##   StanHeaders_2.21.0.5     statmod_1.4.34          
+##   stats_4.0.2              stats4_4.0.2            
+##   stringi_1.4.6            stringr_1.4.0           
+##   survival_3.1-12          sys_3.3                 
+##   testthat_2.3.2           tibble_3.0.1            
+##   tidyr_1.1.0              tidyselect_1.1.0        
+##   tidyverse_1.3.0          tinytex_0.23            
+##   tmvnsim_1.0-2            tools_4.0.2             
+##   utf8_1.1.4               utils_4.0.2             
+##   vctrs_0.3.1              viridis_0.5.1           
+##   viridisLite_0.3.0        whisker_0.4             
+##   withr_2.2.0              xfun_0.14               
+##   xml2_1.3.2               yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -5168,28 +5167,17 @@ We use the head() command to see the first 10 rows (i.e., 10 samples of 5000 sam
 \end{Shaded}
 
 \begin{verbatim}
-##     n pop.mean sample.mean pop.var sample.var.n
-## 1  10    172.5       174.3   157.5        27.81
-## 2  10    172.5       161.8   157.5        83.36
-## 3  10    172.5       173.2   157.5       139.16
-## 4  10    172.5       180.0   157.5       321.80
-## 5  10    172.5       172.8   157.5       160.96
-## 6  10    172.5       172.0   157.5       159.60
-## 7  10    172.5       166.5   157.5        86.45
-## 8  10    172.5       173.5   157.5       139.45
-## 9  10    172.5       177.7   157.5       167.01
-## 10 10    172.5       168.5   157.5       262.65
-##    sample.var.n_1
-## 1           30.90
-## 2           92.62
-## 3          154.62
-## 4          357.56
-## 5          178.84
-## 6          177.33
-## 7           96.06
-## 8          154.94
-## 9          185.57
-## 10         291.83
+##     n sample.mean sample.var.n sample.var.n_1
+## 1  10       174.3        27.81          30.90
+## 2  10       161.8        83.36          92.62
+## 3  10       173.2       139.16         154.62
+## 4  10       180.0       321.80         357.56
+## 5  10       172.8       160.96         178.84
+## 6  10       172.0       159.60         177.33
+## 7  10       166.5        86.45          96.06
+## 8  10       173.5       139.45         154.94
+## 9  10       177.7       167.01         185.57
+## 10 10       168.5       262.65         291.83
 \end{verbatim}
 
 Each row of many\_samples represents a sample of 10 people. Each column of many\_samples indicates a sample statistic. You can see the for each sample/row we indicate n (the sample size) and sample.mean (the mean of the population), and a few other statistics. Even though all the samples came from the same population you can see how the values in the sample.mean column vary across samples/rows. You can see the full extent to which the sample means vary by creating a graph with the code below. In this code, we use the pull() command to extract the value from the sample.mean column and then we send them to the base R hisogram command, hist().
@@ -5258,9 +5246,7 @@ s^2 = \frac{\sum{(x - \bar{x})^2}}{n}
 \end{aligned} 
 \]
 
-The formula for sample variance with an \(n\) in the denominator is, unfortunately, a biased estimator of population variance. In the many\_samples data, the column sample.var.n contains the variance for the sample calculated with the above formula. Below we use code obtain, over the 5000 samples, the average of sample.var.n. The output reveals
-
-Because a sample mean (a statistic) is calculated using a random subset of the population it is likely to differ from the population mean (a parameter). If you, inaccurately, believe that you can learn something meaningful from a single study, this fact may be concerning. Statisticians know, however, that you can rarely learn anything from a single study or even a small set of studies. Consequently, they are more interested in what is true, on average, over a large number of studies. Therefore, we simulate drawing a large number of samples from a population with the code below.
+The formula for sample variance with an \(n\) in the denominator is, unfortunately, a biased estimator of population variance. In the many\_samples data, the column sample.var.n contains the variance for the sample calculated with the above formula. Below we use code obtain, over the 5000 samples, the average of the sample.var.n column. If this average equals the population variance of 157.46 then variance, using \(n\) in the denominator, is an unbiased estimator of the population variance.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5274,7 +5260,7 @@ Because a sample mean (a statistic) is calculated using a random subset of the p
 ## 1         141.1
 \end{verbatim}
 
-The average of the sample variances (141.86), using \(n\) in the denominator, was different from the population variancee (157.46). The average of sample.var.n was much smaller than the population variance. Consequently, sample variance, using \(n\) in the denominator, provides a biased estimate of the population variance. If we try to estimate the population variance with a sample variance, using \(n\) in the denominator, we will, on average, be wrong.
+The average of sample.var.n column (141.86) was much smaller than the population variance (157.46). That is, the average of the sample variances, using \(n\) in the denominator, was smaller than the population variance. Consequently, sample variance, using \(n\) in the denominator, provides a biased estimate of the population variance. If we try to estimate the population variance with sample variance, using \(n\) in the denominator, we will, on average, be wrong.
 
 Fortunately, there is a sample-level formula that estimates the population variance without bias (see Hayes). An unbiased estimate of the population variance can be obtained if we calculate the sample variance but divide by \(n - 1\) instead of \(n\). The unbiased estimate is calculated using Formula \eqref{eq:samplevarn1ch5}.
 
@@ -5299,7 +5285,7 @@ In the many\_samples data, the column sample.var.n\_1 was generated using Formul
 
 We see that the average of the 5000 values using \(n-1\) in the denominator is 157.62 which is very close to the population varaince of 157.46. Consequently, we when we use \(n-1\) in the denominator we have an unbiased estimate of the population variance. If we try to estimate the population variance with a sample variance, using \(n-1\) in the denominator, we will, on average, be right.
 
-You may wonder at this point, when we use \(n-1\) in the denominator of the sample variance, can we still think of it as the average of the squared deviations from the mean. The short answer is yes. When you use \(n-1\) in the denominator of the sample variance you are not calculating the variance for the group people in the sample. Rather, you are estimating the variance for the much larger group of people in the population. Consequently, it makes sense to think of sample variance, using \(n-1\), as an estimate of the average of the squared errors in the population. That is, it makes sense to think of sample variance, using \(n-1\), as an estimate of the average of the squared differences between each person in the population and the population mean.
+You may wonder at this point, when we use \(n-1\) in the denominator of the sample variance, can we still think of it as the average of the squared deviations from the mean. The short answer is yes. When you use \(n-1\) in the denominator of the sample variance you are not calculating the variance for the group people in the sample. Rather, you are estimating the variance for the much larger group of people in the population. Consequently, it makes sense to think of sample variance, using \(n-1\), as an estimate of the average of the squared errors \emph{in the population}. That is, it makes sense to think of sample variance, using \(n-1\), as an estimate of the average of the squared differences between each person in the population and the population mean.
 
 \hypertarget{estimating-standard-deviation}{%
 \section{Estimating standard deviation}\label{estimating-standard-deviation}}
