--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -203,7 +203,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-07-21}
+\date{2020-07-22}
 
 \begin{document}
 \maketitle
@@ -323,24 +323,25 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   repr_1.1.0               reprex_0.3.0            
 ##   rlang_0.4.6              rmarkdown_2.2           
 ##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rstudioapi_0.11         
-##   rvest_0.3.5              scales_1.1.1            
-##   selectr_0.4.2            sem_3.1.11              
-##   semTools_0.5.3           skimr_2.1.1             
-##   snakecase_0.11.0         splines_4.0.2           
-##   StanHeaders_2.21.0.5     statmod_1.4.34          
-##   stats_4.0.2              stats4_4.0.2            
-##   stringi_1.4.6            stringr_1.4.0           
-##   survival_3.1-12          sys_3.3                 
-##   testthat_2.3.2           tibble_3.0.1            
-##   tidyr_1.1.0              tidyselect_1.1.0        
-##   tidyverse_1.3.0          tinytex_0.23            
-##   tmvnsim_1.0-2            tools_4.0.2             
-##   utf8_1.1.4               utils_4.0.2             
-##   vctrs_0.3.1              viridis_0.5.1           
-##   viridisLite_0.3.0        whisker_0.4             
-##   withr_2.2.0              xfun_0.14               
-##   xml2_1.3.2               yaml_2.2.1
+##   rprojroot_1.3.2          rsconnect_0.8.16        
+##   rstudioapi_0.11          rvest_0.3.5             
+##   scales_1.1.1             selectr_0.4.2           
+##   sem_3.1.11               semTools_0.5.3          
+##   skimr_2.1.1              snakecase_0.11.0        
+##   splines_4.0.2            StanHeaders_2.21.0.5    
+##   statmod_1.4.34           stats_4.0.2             
+##   stats4_4.0.2             stringi_1.4.6           
+##   stringr_1.4.0            survival_3.1-12         
+##   sys_3.3                  testthat_2.3.2          
+##   tibble_3.0.1             tidyr_1.1.0             
+##   tidyselect_1.1.0         tidyverse_1.3.0         
+##   tinytex_0.23             tmvnsim_1.0-2           
+##   tools_4.0.2              utf8_1.1.4              
+##   utils_4.0.2              vctrs_0.3.1             
+##   viridis_0.5.1            viridisLite_0.3.0       
+##   whisker_0.4              withr_2.2.0             
+##   xfun_0.14                xml2_1.3.2              
+##   yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -5167,17 +5168,17 @@ We use the head() command to see the first 10 rows (i.e., 10 samples of 5000 sam
 \end{Shaded}
 
 \begin{verbatim}
-##     n sample.mean sample.var.n sample.var.n_1
-## 1  10       174.3        27.81          30.90
-## 2  10       161.8        83.36          92.62
-## 3  10       173.2       139.16         154.62
-## 4  10       180.0       321.80         357.56
-## 5  10       172.8       160.96         178.84
-## 6  10       172.0       159.60         177.33
-## 7  10       166.5        86.45          96.06
-## 8  10       173.5       139.45         154.94
-## 9  10       177.7       167.01         185.57
-## 10 10       168.5       262.65         291.83
+##    study  n sample.mean sample.var.n sample.var.n_1
+## 1      1 10       174.3        27.81          30.90
+## 2      2 10       161.8        83.36          92.62
+## 3      3 10       173.2       139.16         154.62
+## 4      4 10       180.0       321.80         357.56
+## 5      5 10       172.8       160.96         178.84
+## 6      6 10       172.0       159.60         177.33
+## 7      7 10       166.5        86.45          96.06
+## 8      8 10       173.5       139.45         154.94
+## 9      9 10       177.7       167.01         185.57
+## 10    10 10       168.5       262.65         291.83
 \end{verbatim}
 
 Each row of many\_samples represents a sample of 10 people. Each column of many\_samples indicates a sample statistic. You can see the for each sample/row we indicate n (the sample size) and sample.mean (the mean of the population), and a few other statistics. Even though all the samples came from the same population you can see how the values in the sample.mean column vary across samples/rows. You can see the full extent to which the sample means vary by creating a graph with the code below. In this code, we use the pull() command to extract the value from the sample.mean column and then we send them to the base R hisogram command, hist().
@@ -5246,12 +5247,13 @@ s^2 = \frac{\sum{(x - \bar{x})^2}}{n}
 \end{aligned} 
 \]
 
-The formula for sample variance with an \(n\) in the denominator is, unfortunately, a biased estimator of population variance. In the many\_samples data, the column sample.var.n contains the variance for the sample calculated with the above formula. Below we use code obtain, over the 5000 samples, the average of the sample.var.n column. If this average equals the population variance of 157.46 then variance, using \(n\) in the denominator, is an unbiased estimator of the population variance.
+The formula for sample variance with an \(n\) in the denominator is, unfortunately, a biased estimator of population variance. In the many\_samples data, the column sample.var.n contains the variance for the sample calculated with the above formula. Below we use code to obtain the average of the sample.var.n column over the 5000 samples. If this average equals the population variance of 157.5 then variance, using \(n\) in the denominator, is an unbiased estimator of the population variance.
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{many_samples }\OperatorTok{%>%}
-\StringTok{ }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{mean_of_var.n =} \KeywordTok{mean}\NormalTok{(sample.var.n))}
+\StringTok{  }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{mean_of_var.n =} \KeywordTok{mean}\NormalTok{(sample.var.n)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{as.data.frame}\NormalTok{()}
 \end{Highlighting}
 \end{Shaded}
 
@@ -5260,7 +5262,7 @@ The formula for sample variance with an \(n\) in the denominator is, unfortunate
 ## 1         141.1
 \end{verbatim}
 
-The average of sample.var.n column (141.86) was much smaller than the population variance (157.46). That is, the average of the sample variances, using \(n\) in the denominator, was smaller than the population variance. Consequently, sample variance, using \(n\) in the denominator, provides a biased estimate of the population variance. If we try to estimate the population variance with sample variance, using \(n\) in the denominator, we will, on average, be wrong.
+The average of sample.var.n column (141.86) was much smaller than the population variance (157.5). That is, the average of the sample variances, using \(n\) in the denominator, was smaller than the population variance. Consequently, sample variance, using \(n\) in the denominator, provides a biased estimate of the population variance. If we try to estimate the population variance with sample variance, using \(n\) in the denominator, we will, on average, be wrong.
 
 Fortunately, there is a sample-level formula that estimates the population variance without bias (see Hayes). An unbiased estimate of the population variance can be obtained if we calculate the sample variance but divide by \(n - 1\) instead of \(n\). The unbiased estimate is calculated using Formula \eqref{eq:samplevarn1ch5}.
 
@@ -5274,7 +5276,8 @@ In the many\_samples data, the column sample.var.n\_1 was generated using Formul
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{many_samples }\OperatorTok{%>%}
-\StringTok{ }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{mean_of_var.n_1 =} \KeywordTok{mean}\NormalTok{(sample.var.n_}\DecValTok{1}\NormalTok{))}
+\StringTok{  }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{mean_of_var.n_1 =} \KeywordTok{mean}\NormalTok{(sample.var.n_}\DecValTok{1}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{as.data.frame}\NormalTok{()}
 \end{Highlighting}
 \end{Shaded}
 
@@ -5300,74 +5303,76 @@ s = \sqrt{\frac{\sum{(x - \bar{x})^2}}{n-1}}
 \hypertarget{estimating-smd}{%
 \section{Estimating SMD}\label{estimating-smd}}
 
+So far we have considered people's heights as a single population. You may have noticed, however, that we have column indicating the sex of each person. Consequently, we could think of there being two populations - a population of heights of males and a population of heights for females. When you have two populations often it is desirable to express the differences between the two populations as a standardized mean difference (SMD) also known as Cohen's \(d\).
+
+We begin be determining the mean and standard deviation of each population with the code below:
+
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{female_pop_data <-}\StringTok{ }\NormalTok{pop_data }\OperatorTok{%>%}\StringTok{ }\KeywordTok{filter}\NormalTok{(sex }\OperatorTok{==}\StringTok{ "female"}\NormalTok{)}
-\NormalTok{male_pop_data <-}\StringTok{ }\NormalTok{pop_data }\OperatorTok{%>%}\StringTok{ }\KeywordTok{filter}\NormalTok{(sex }\OperatorTok{==}\StringTok{ "male"}\NormalTok{)}
+\NormalTok{pop_data }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{group_by}\NormalTok{(sex) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{mean =} \KeywordTok{mean}\NormalTok{(height),}
+            \DataTypeTok{sd =} \KeywordTok{sd.pop}\NormalTok{(height)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{as.data.frame}\NormalTok{()}
 \end{Highlighting}
 \end{Shaded}
 
-For females:
+\begin{verbatim}
+## `summarise()` ungrouping output (override with `.groups` argument)
+\end{verbatim}
+
+\begin{verbatim}
+##      sex mean    sd
+## 1 female  165 10.06
+## 2   male  180 10.06
+\end{verbatim}
+
+From this output we see the population parameters for males and females. The mean of the male population heights is 180 (\(\mu_{male} = 180\)) whereas the mean of the female population heights is 165 (\(\mu_{male} = 165\)). Both populations have a standard deviation of 10.1 (\(\sigma = \sigma_{female} = \sigma_{male} = 10.1\)):
 
 \[
 \begin{aligned} 
 \mu_{female} &= 165 \\
-\sigma_{female} &= 10\\
-\end{aligned} 
-\]
-
-For males:
-
-\[
-\begin{aligned} 
 \mu_{male} &= 180 \\
-\sigma_{male} &= 10\\
+\sigma = \sigma_{female} = \sigma_{male} &= 10.1\\
 \end{aligned} 
 \]
-
-\begin{figure}
-\includegraphics[width=0.95\linewidth]{ch_samples/images/sex_pops} \caption{Illustration of the standardized mean difference of 1.50 for height between males and females. The solid black vertical lines indicates the means ($\mu$) for the two populations.}\label{fig:sexpop}
-\end{figure}
 
 \hypertarget{population-smd}{%
 \subsection{Population SMD}\label{population-smd}}
 
-In original units:
-\[
-\begin{aligned} 
-\Delta M &= (\mu_{male} - \mu_{female}) \\
-&= (180 - 165) \\
-&= 15 \\
-\end{aligned} 
-\]
-
-Formula \eqref{eq:popsmdch5} below illustrates\ldots.
+The population-level standardized mean difference (i.e., Cohen's \(d\) or \(\delta\)) is calculated using Formula \eqref{eq:popsmdch5}.
 
 \begin{equation} 
 \delta  = \frac{(\mu_{male} - \mu_{female})}{\sigma} 
       \label{eq:popsmdch5}
 \end{equation}
 
-Calculation:
+We use the previously obtained population parameters in Formula \eqref{eq:popsmdch5} and find that the standardized mean difference is 1.49 (i.e., \(\delta = 1.49\)). This population-level difference is illustrated in Figure \ref{fig:sexpop}.
 
 \[
 \begin{aligned} 
 \delta  &= \frac{(\mu_{male} - \mu_{female})}{\sigma} \\
-&= \frac{(180 - 165)}{10} \\
-&= \frac{15}{10} \\
-&= 1.50 \\
+&= \frac{(180 - 165)}{10.1} \\
+&= \frac{15}{10.1} \\
+&= 1.49 \\
 \end{aligned} 
 \]
+
+\begin{figure}
+\includegraphics[width=0.95\linewidth]{ch_samples/images/sex_pops} \caption{Illustration of the standardized mean difference of 1.49 for height between males and females. The solid black vertical lines indicates the means ($\mu$) for the two populations.}\label{fig:sexpop}
+\end{figure}
 
 \hypertarget{sample-smd}{%
 \subsection{Sample SMD}\label{sample-smd}}
 
-Formula \eqref{eq:samplesmdch5} below illustrates\ldots.
+When calculating the standardized mean difference we rarely have access to the entire population. Consequently, we need to estimate the population-level standardized mean difference using sample data. The sample-level approach to calculating SMD is presented below in Formula \eqref{eq:samplesmdch5}. This value is known by many other names: \(d\), Cohen's \(d\), and Hedges \(g\).
 
 \begin{equation} 
 d  = \frac{(\bar{x}_{male} - \bar{x}_{female})}{s_{pooled}} 
       \label{eq:samplesmdch5}
 \end{equation}
+
+A notable difference
 
 \hypertarget{estimating-means}{%
 \subsubsection{Estimating means}\label{estimating-means}}
@@ -5375,16 +5380,32 @@ d  = \frac{(\bar{x}_{male} - \bar{x}_{female})}{s_{pooled}}
 \hypertarget{estimating-variance-1}{%
 \subsubsection{Estimating variance}\label{estimating-variance-1}}
 
+\begin{equation} 
+s_{pooled}^2  = \frac{(n_1 -1)s_1^2 + (n_2 -1)s_2^2}{n_1 + n_2-2}
+      \label{eq:poolvarch5}
+\end{equation}
+
+\begin{equation} 
+s_{pooled}^2  = \frac{s_{1}^2 + s_{2}^2}{2} 
+      \label{eq:poolvarequalch5}
+\end{equation}
+
+\[
+\begin{aligned} 
+s_{pooled}^2  &= \frac{s_{male}^2 + s_{female}^2}{2} \\
+\end{aligned} 
+\]
+
 \begin{figure}
-\includegraphics[width=0.95\linewidth]{ch_samples/images/pool1} \caption{The male sample variance (n-1) is an estimate of male population variance. Likewise, the female sample variance (n-1) is an estimate of the female population variance. }\label{fig:pool1}
+\includegraphics[width=0.8\linewidth]{ch_samples/images/pool1} \caption{The male sample variance (n-1) is an estimate of male population variance. Likewise, the female sample variance (n-1) is an estimate of the female population variance. }\label{fig:pool1}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=0.95\linewidth]{ch_samples/images/pool2} \caption{We assume the population variances are the same. Therefore, the male and female sample variances are both estimates of the same population variance.}\label{fig:pool2}
+\includegraphics[width=0.8\linewidth]{ch_samples/images/pool2} \caption{We assume the population variances are the same. Therefore, the male and female sample variances are both estimates of the same population variance.}\label{fig:pool2}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=0.95\linewidth]{ch_samples/images/pool3} \caption{We create a single estimate of the population variance called pooled variance ($s_{pooled}^2$). When sample sizes are equal, the pooled variance is just the average of the two sample variances (both using n-1). When the sample sizes are unequal, we need to use a more sophisticated formula to obtain the pooled variance.}\label{fig:pool3}
+\includegraphics[width=0.8\linewidth]{ch_samples/images/pool3} \caption{We create a single estimate of the population variance called pooled variance ($s_{pooled}^2$). When sample sizes are equal, the pooled variance is just the average of the two sample variances (both using n-1). When the sample sizes are unequal (i.e., different numbers of males and females), we need to use a more sophisticated formula to obtain the pooled variance.}\label{fig:pool3}
 \end{figure}
 
 \hypertarget{combining-everything}{%
@@ -5392,11 +5413,41 @@ d  = \frac{(\bar{x}_{male} - \bar{x}_{female})}{s_{pooled}}
 
 \[
 \begin{aligned} 
-d  &= \frac{(\bar{x}_{male} - \bar{x}_{female})}{s_{pooled}} \\
+d  &= \frac{\bar{x}_{male} - \bar{x}_{female}}{s_{pooled}} \\
+\end{aligned} 
+\]
+
+\[
+\begin{aligned} 
+d_{unbiased}  &= d  \times [1 - \frac{3}{4(n_1 + n_2)-9}] \\
 \end{aligned} 
 \]
 
 \newpage
+
+\hypertarget{bias}{%
+\section{Bias}\label{bias}}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{male_population_heights <-}\StringTok{ }\NormalTok{pop_data }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{filter}\NormalTok{(sex }\OperatorTok{==}\StringTok{ "male"}\NormalTok{) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{pull}\NormalTok{(height)}
+
+\NormalTok{female_population_heights <-}\StringTok{ }\NormalTok{pop_data }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{filter}\NormalTok{(sex }\OperatorTok{==}\StringTok{ "female"}\NormalTok{) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{pull}\NormalTok{(height)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{many_samples<-}\StringTok{  }\KeywordTok{get_d_samples_from_population_data}\NormalTok{(}\DataTypeTok{pop1 =}\NormalTok{ male_population_heights,}
+                                   \DataTypeTok{pop2 =}\NormalTok{ female_population_heights,}
+                                   \DataTypeTok{cell.n =} \DecValTok{10}\NormalTok{,}
+                                   \DataTypeTok{number.of.samples =} \DecValTok{5000}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
 
 \hypertarget{meta-analysis}{%
 \section{Meta-analysis}\label{meta-analysis}}
@@ -5432,6 +5483,20 @@ Variance\strut
 \(s^2 = \frac{\sum{(x - \bar{x})^2}}{n-1}\)\strut
 \end{minipage}\tabularnewline
 \begin{minipage}[t]{0.30\columnwidth}\raggedright
+\strut
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
+\strut
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
+\(s_{pooled}^2 = \frac{(n_1 -1)s_1^2 + (n_2 -1)s_2^2}{n_1 + n_2-2}\)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.30\columnwidth}\raggedright
+\strut
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
+\strut
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
+\(MSE = \frac{(n_1 -1)s_1^2 + (n_2 -1)s_2^2}{n_1 + n_2-2}\)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.30\columnwidth}\raggedright
 Standard deviation\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\sigma = \sqrt{\frac{\sum{(X - \mu)^2}}{N}}\)\strut
@@ -5439,11 +5504,25 @@ Standard deviation\strut
 \(s =\sqrt{\frac{\sum{(x - \bar{x})^2}}{n-1}}\)\strut
 \end{minipage}\tabularnewline
 \begin{minipage}[t]{0.30\columnwidth}\raggedright
+\strut
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
+\strut
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
+\(s_{pooled} = \sqrt{\frac{(n_1 -1)s_1^2 + (n_2 -1)s_2^2}{n_1 + n_2-2}}\)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.30\columnwidth}\raggedright
 Cohen's \(d\) or SMD\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(\delta= \frac{\mu_{1} - \mu_{2}}{\sigma}\)\strut
 \end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
 \(d = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}}\)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.30\columnwidth}\raggedright
+\strut
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
+\strut
+\end{minipage} & \begin{minipage}[t]{0.30\columnwidth}\raggedright
+\(d_{unbiased} = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}} \times [1 - \frac{3}{4(n_1 + n_2)-9}]\)\strut
 \end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
