--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -243,7 +243,7 @@ twopop <- ggplot(data = pop_data,
                  fill = "black",
                  color =  "black") +
   theme_classic() +
-  scale_alpha_manual(values = c(.30, .50)) +
+  scale_alpha_manual(values = c(.20, .50)) +
   facet_wrap(~sex, nrow = 2) +
   scale_x_continuous(breaks = seq(100, 250, by = 10)) +
   geom_vline(xintercept = 165, size = 2) +
@@ -386,7 +386,7 @@ many_samples %>%
 
 \doublespacing
 
-| Name | Parameter  | Estimated by this statistic | 
+|  | Parameter  | Estimated by this statistic | 
 | ---   | ---         |  ---   |
 | Mean |$\mu = \frac{\sum{X}}{N}$ | $\bar{x} = \frac{\sum{x}}{n}$|
 | Variance |$\sigma^2 = \frac{\sum{(X - \mu)^2}}{N}$  | $s^2 = \frac{\sum{(x - \bar{x})^2}}{n-1}$ |
@@ -397,3 +397,19 @@ many_samples %>%
 | Cohen's $d$ or SMD|$\delta= \frac{\mu_{1} - \mu_{2}}{\sigma}$ | $d  = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}}$    |
 |          |     | $d_{unbiased}  = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}}  \times [1 - \frac{3}{4(n_1 + n_2)-9}]$ |
 \singlespacing
+
+
+Key Points
+
+* Sample are of interest because the help use estimate attribute of the population
+
+* Sample statistics estimate population parameters
+
+* Due to the fact that sample statistics are based on a random subset of the population (i.e., a sample) they often differ substantially from the population parameter. This illustrates that informational value of a single study is typically quite low.
+
+* A statistic is unbiased if the average of the sample statistics, over many thousand of samples, equals the population parameter.
+
+* To avoid bias, sometimes the formula for a sample statistics differs from the formula for the population parameter
+
+* We used simulations to  but they were like a meta-analysis.
+
